tests/parser-test-files/bad-files/define-class.3.error
error: Malformed method definition
  --> test:5:2
   |
 4 |  (define-class (C :a :b)
   |                --------- in this class definition
 5 |    m)
   |    ^ missing method type
